启动脚本优化